--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.3"
-
 services:
   main:
     container_name: main
@@ -12,8 +10,6 @@ services:
       postgres:
         condition: service_started
       redis:
-        condition: service_started
-      elastic:
         condition: service_started
     restart: always
     ports:
@@ -45,7 +41,7 @@ services:
       - Pumpkin-network
     volumes:
       - ./build/sql/create_tables.sql:/docker-entrypoint-initdb.d/initdb.sql
-      - younote-db-data:/var/lib/postgresql/data
+      - pumpkin-db-data:/var/lib/postgresql/data
   redis:
     container_name: redis
     image: redis:latest
@@ -54,21 +50,21 @@ services:
       - -c
       - redis-server --requirepass ${REDIS_PASSWORD}
     volumes:
-      - younote-redis-data:/var/lib/redis/data
+      - pumpkin-redis-data:/var/lib/redis/data
       - ./redis.conf:/usr/local/etc/redis/redis.conf
     ports:
       - "127.0.0.1:6379:6379"
     env_file:
       - .env
     networks:
-      - YouNote-network
+      - Pumpkin-network
 
 networks:
-  YouNote-network:
-    name: YouNote-network
+  Pumpkin-network:
+    name: Pumpkin-network
     driver: bridge
 
 volumes:
-  younote-db-data:
-  younote-redis-data:
-  younote-elastic-data:
+  pumpkin-db-data:
+  pumpkin-redis-data:
+  pumpkin-elastic-data:
