--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       - "127.0.0.1:8800:8800"
     networks:
       - Pumpkin-network
+    volumes:
+      - pumpkin-user-uploads:${USER_UPLOADS_DIR}
 
   postgres:
     env_file:
@@ -31,8 +33,8 @@ services:
     networks:
       - Pumpkin-network
     volumes:
-      - ./build/sql/create_tables.sql:/docker-entrypoint-initdb.d/initdb.sql
       - pumpkin-db-data:/var/lib/postgresql/data
+
   redis:
     container_name: redis
     image: redis:latest
@@ -42,7 +44,6 @@ services:
       - redis-server --requirepass ${REDIS_PASSWORD}
     volumes:
       - pumpkin-redis-data:/var/lib/redis/data
-      - ./redis.conf:/usr/local/etc/redis/redis.conf
     ports:
       - "${REDIS_PORT}:6379"
     env_file:
@@ -58,4 +59,4 @@ networks:
 volumes:
   pumpkin-db-data:
   pumpkin-redis-data:
-  pumpkin-elastic-data:
+  pumpkin-user-uploads:
