Исправлен postgresql.conf

--- a/database/postgresql.conf
+++ b/database/postgresql.conf
@@ -10,14 +10,13 @@ shared_preload_libraries = 'pg_stat_statements, auto_explain'
 
 pg_stat_statements.max = 10000           # Максимальное количество уникальных запросов
 pg_stat_statements.track = all           # Отслеживать все типы команд
-pg_stat_statements.track_utility = on    # Отслеживать утилитарные команды (например, EXPLAIN)
 pg_stat_statements.save = on             # Сохранять статистику между перезагрузками
 
 auto_explain.log_min_duration = '500ms'  # Логировать план выполнения запросов длительностью более 500 мс
-auto_explain.log_analyze = on            # Включить анализ выполнения (ANALYZE) в объяснение
-auto_explain.log_verbose = on            # Включить подробное объяснение
+auto_explain.log_analyze = on            # Включить анализ выполнения (ANALYZE) в EXPLAIN
+auto_explain.log_verbose = on            # Включить подробный EXPLAIN
 auto_explain.log_buffers = on            # Логировать использование буферов
-auto_explain.log_format = text           # Формат логов (может быть также JSON)
+auto_explain.log_format = json           # Формат логов
 
 logging_collector = on
 log_directory = '/pg_log/'
