Оптимизирован процесс сборки + ебатория с сертификатами

--- a/database/postgresql.conf
+++ b/database/postgresql.conf
@@ -1,6 +1,9 @@
 max_connections = 33
 superuser_reserved_connections = 3
+
 ssl = on
+ssl_cert_file = '/configs/fullchain.crt'
+ssl_key_file = '/configs/privkey.key'
 
 log_min_duration_statement = 1000  # Логировать запросы дольше 1 секунды
 log_statement = 'none'             # Логировать только медленные запросы
