--- a/cmd/user/Dockerfile
+++ b/cmd/user/Dockerfile
@@ -5,15 +5,15 @@ WORKDIR /tmp
 COPY ./go.mod ./go.sum /go/src/pumpkin/
 WORKDIR /go/src/pumpkin
 RUN go mod download
-COPY ../../Makefile /go/src/pumpkin/
-COPY ../../internal /go/src/pumpkin/internal/
-COPY ./main.go /go/src/pumpkin/cmd/board/
-RUN make build
+COPY ./Makefile /go/src/pumpkin/
+COPY ./internal /go/src/pumpkin/internal/
+COPY ./cmd/user/main.go /go/src/pumpkin/cmd/user/
+RUN make build_user
 
 # 2 шаг
 FROM alpine AS run_stage
 WORKDIR /app_binary
-COPY --from=build_stage /go/src/pumpkin/build/pumpkin_backend /app_binary/
-RUN chmod +x ./pumpkin_backend
+COPY --from=build_stage /go/src/pumpkin/build/user_app /app_binary/
+RUN chmod +x ./user_app
 EXPOSE 8080/tcp
-ENTRYPOINT ./pumpkin_backend
+ENTRYPOINT ./user_app
