--- a/docker_compose.env
+++ b/docker_compose.env
@@ -1,19 +1,21 @@
 # Настройки environment для docker-compose
 # Не стоит менять этот файл на тачке, пароль лучше писать в .env
 
-POSTGRES_SOCKET = /tmp/postgres/postgres.sock
-POSTGRES_USER = tarasovxx
-POSTGRES_DB = pumpkin
-POSTGRES_SSLMODE = disable
+POSTGRES_URL= postgresql://tarasovxx@/pumpkin?host=/tmp/postgres/postgres.sock
+REDIS_URL = /tmp/redis/redis.sock
 
-REDIS_SOCKET = /tmp/redis/redis.sock
-
-MAX_UPLOAD_SIZE = 10485760
-AUTH_GRPC_URL = auth:
-
+MAX_UPLOAD_SIZE = 10485760 # 10 МБ
 UPLOAD_DIR = /pumpkin_user_uploads
-SERVER_PORT =
+
+AUTH_GRPC_URL = auth:8801
+SERVER_PORT = 80
+
+LOG_ROOT = /pumpkin_logs/
 
 AUTH_POSTGRES_MAX_CONNS = 5
 USER_POSTGRES_MAX_CONNS = 10
 BOARD_POSTGRES_MAX_CONNS = 15
+
+AUTH_LOG_FILE = auth_service.log
+USER_LOG_FILE = user_service.log
+BOARD_LOG_FILE = board_service.log
