Работа над интеграцией сервисов

--- a/database/redis/redis.conf
+++ b/database/redis/redis.conf
@@ -2,7 +2,7 @@
 bind 127.0.0.1 ::1
 port 0
 
-unixsocket /tmp/redis/redis.sock
+unixsocket /tmp/redis/redis.sock/.s.REDIS.6379
 unixsocketperm 777
 
 
@@ -19,7 +19,7 @@ maxmemory-policy allkeys-lru
 # save 60 10000
 
 # Директория для хранения файлов базы данных и снимков
-dir /var/lib/redis
+dir /redis_data
 
 # Имя файла для снимков RDB
 dbfilename dump.rdb
