--- a/docker_compose.env
+++ b/docker_compose.env
@@ -1,8 +1,8 @@
 # Настройки environment для docker-compose
-# Не стоит менять этот файл на тачке, пароль лучше писать в .env
+# Не стоит менять этот файл на тачке
 
 POSTGRES_URL= postgresql://tarasovxx@/pumpkin?host=/tmp/postgres/postgres.sock
-REDIS_URL = /tmp/redis/redis.sock
+REDIS_URL = unix:///tmp/redis/redis.sock/.s.REDIS.6379
 
 MAX_UPLOAD_SIZE = 10485760 # 10 МБ
 UPLOAD_DIR = /pumpkin_user_uploads
