--- a/docker_compose.env
+++ b/docker_compose.env
@@ -7,8 +7,8 @@ REDIS_URL = unix:///tmp/redis/redis.sock/.s.REDIS.6379
 MAX_UPLOAD_SIZE = 10485760 # 10 МБ
 UPLOAD_DIR = /pumpkin_user_uploads
 
-AUTH_GRPC_URL = auth:8801
-SERVER_PORT = 80
+AUTH_GRPC_URL = auth_service:8888
+SERVER_PORT = 8888
 
 LOG_ROOT = /pumpkin_logs/
 
