--- a/docker_compose.env
+++ b/docker_compose.env
@@ -19,3 +19,5 @@ BOARD_POSTGRES_MAX_CONNS = 15
 AUTH_LOG_FILE = auth_service.log
 USER_LOG_FILE = user_service.log
 BOARD_LOG_FILE = board_service.log
+
+SUPERUSER_DSN = postgresql://postgres@/pumpkin?host=/tmp/postgres/postgres.sock
