--- a/docker_compose.env
+++ b/docker_compose.env
@@ -15,9 +15,11 @@ LOG_ROOT = /pumpkin_logs/
 AUTH_POSTGRES_MAX_CONNS = 5
 USER_POSTGRES_MAX_CONNS = 10
 BOARD_POSTGRES_MAX_CONNS = 15
+POLL_POSTGRES_MAX_CONNS = 1
 
 AUTH_LOG_FILE = auth_service.log
 USER_LOG_FILE = user_service.log
 BOARD_LOG_FILE = board_service.log
+POLL_LOG_FILE = poll_service.log
 
 SUPERUSER_DSN = postgresql://postgres@/pumpkin?host=/tmp/postgres/postgres.sock
