Сделано ДЗ №2 по СУБД

--- a/database/postgres/postgresql.conf
+++ b/database/postgres/postgresql.conf
@@ -29,3 +29,5 @@ auto_explain.log_buffers = on            # Логировать использо
 auto_explain.log_format = json           # Формат логов
 
 data_directory = '/pg_data'
+
+statement_timeout = '20s' # Таймаут 20 секунд на все запросы
