--- a/prometheus.yml
+++ b/prometheus.yml
@@ -23,7 +23,7 @@ scrape_configs:
 
   - job_name: "board"
     static_configs:
-      - targets: ["localhost:9090"]
+      - targets: ["localhost:8802/prometheus/metrics"]
 
   - job_name: "poll"
     static_configs:
