--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -145,6 +145,10 @@ services:
       - .env
     networks:
       - Pumpkin-network
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
 
   node_exporter:
     depends_on:
