--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,30 +1,31 @@
 global:
   scrape_interval: 15s # интервал между опросами сервисов
   evaluation_interval: 15s # как часто обрабатывать данные согласно правилам
-  external_labels:
-    monitor: "pumpkin-monitor" # название метрики или метка
+#   external_labels:
+#     monitor: "pumpkin-monitor" # название метрики или метка
 
-rule_files:
-  # - "first.rules"
-  # - "second.rules"
+# rule_files:
+#   # - "first.rules"
+#   # - "second.rules"
 
 scrape_configs:
-  - job_name: "prometheus"
-    static_configs:
-      - targets: ["localhost:9090"]
+  # - job_name: "prometheus"
+  #   static_configs:
+  #     - targets: ["localhost:9090"]
 
-  - job_name: "auth"
-    static_configs:
-      - targets: ["localhost:9090"]
+  # - job_name: "auth"
+  #   static_configs:
+  #     - targets: ["localhost:9090"]
 
-  - job_name: "user"
-    static_configs:
-      - targets: ["localhost:9090"]
+  # - job_name: "user"
+  #   static_configs:
+  #     - targets: ["localhost:9090"]
 
   - job_name: "board"
+    metrics_path: /prometheus/metrics
     static_configs:
-      - targets: ["localhost:8802/prometheus/metrics"]
+      - targets: ["board_service:8888"]
 
-  - job_name: "poll"
-    static_configs:
-      - targets: ["localhost:9090"]
+  # - job_name: "poll"
+  #   static_configs:
+  #     - targets: ["localhost:9090"]
