--- a/prometheus.yml
+++ b/prometheus.yml
@@ -5,6 +5,11 @@ global:
     monitor: "pumpkin-monitor" # название метрики или метка
 
 scrape_configs:
+  - job_name: "node_exporter"
+    metrics_path: /prometheus/metrics
+    static_configs:
+      - targets: ["node_exporter:9100"]
+
   - job_name: "auth"
     metrics_path: /prometheus/metrics
     static_configs:
