--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -154,8 +154,19 @@ services:
     depends_on:
       - prometheus
     image: quay.io/prometheus/node-exporter:latest
-    env_file:
-      - .env
+    container_name: node_exporter
+    command:
+      - "--path.procfs=/host/proc"
+      - "--path.rootfs=/rootfs"
+      - "--path.sysfs=/host/sys"
+      - "--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)"
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    hostname: node_exporter
+    ports:
+      - "8011:9100"
     networks:
       - Pumpkin-network
 
