--- a/prometheus.yml
+++ b/prometheus.yml
@@ -6,7 +6,7 @@ global:
 
 scrape_configs:
   - job_name: "node_exporter"
-    metrics_path: /prometheus/metrics
+    metrics_path: /metrics
     static_configs:
       - targets: ["node_exporter:9100"]
 
