Исправлены ошибки для тачки

--- a/cmd/auth/Dockerfile
+++ b/cmd/auth/Dockerfile
@@ -1,5 +1,6 @@
-FROM alpine
-RUN apk add make
+FROM ubuntu
+RUN apt update
+RUN apt install wget make
 
 WORKDIR /tmp
 RUN wget https://github.com/golang-migrate/migrate/releases/download/v4.18.1/migrate.linux-amd64.tar.gz -O migrate.tar.gz
