--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -171,7 +171,7 @@ services:
       - Pumpkin-network
 
   elastic:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.16.1
+    image: bitnami/elasticsearch
     container_name: elastic
     ports:
       - "127.0.0.1:8020:9200"
