Исправления (не работало)

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -42,11 +42,7 @@ http {
 
         # Перенаправление запросов с префиксами /static, /inviteBoard, /card
         # а также запросов к /runtime.js, /main.js, /main.css на фронт
-        location ~ ^/(static|inviteBoard|card)/ {
-            proxy_pass http://0.0.0.0:8880;
-        }
-
-        location ~ ^/(runtime\.js|main\.js|main\.css)$ {
+        location / {
             proxy_pass http://0.0.0.0:8880;
         }
 
