--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -43,7 +43,7 @@ http {
         # Перенаправление запросов с префиксами /static, /inviteBoard, /card
         # а также запросов к /runtime.js, /main.js, /main.css на фронт
         location / {
-            proxy_pass http://0.0.0.0:8880;
+            proxy_pass http://main_front:8880;
         }
 
         client_max_body_size 100M;
