--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,6 +10,7 @@ http {
 
     server {
         listen 443 ssl;
+        http2 on;
         server_name ${SERVER_NAME};
 
         ssl_certificate     /certs/cert.crt;
@@ -43,7 +44,8 @@ http {
         # Перенаправление запросов с префиксами /static, /inviteBoard, /card
         # а также запросов к /runtime.js, /main.js, /main.css на фронт
         location / {
-            proxy_pass http://main_front:8880;
+            set $target http://main_front:8880;
+            proxy_pass $target;
         }
 
         client_max_body_size 100M;
