--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,32 +48,32 @@ jobs:
         name: Test
         run: go test -v ./...
 
-  # deploy:
-  #   name: deploy 
-  #   needs: tests
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - 
-  #       name: pull code
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.HOST }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.PRIVATE_KEY }}
-  #         script: cd /home/${{ secrets.USERNAME }}/back && git pull
-  #     - name: build containers
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         timeout: 200m
-  #         command_timeout: 200m
-  #         host: ${{ secrets.HOST }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.PRIVATE_KEY }}
-  #         script: cd /home/${{ secrets.USERNAME }}/back && sudo docker compose build
-  #     - name: restart service
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.HOST }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.PRIVATE_KEY }}
-  #         script: cd /home/${{ secrets.USERNAME }}/back && make build_all -j && docker compose up --build
+  deploy:
+    name: deploy 
+    needs: tests
+    runs-on: ubuntu-latest
+    steps:
+      - 
+        name: pull code
+        uses: appleboy/ssh-action@master
+        with:
+          host: kanban-pumpkin.ru
+          username: ubuntu
+          key: ${{ secrets.PRIVATE_KEY }}
+          script: cd /home/ubuntu/back && git pull
+      - name: build containers
+        uses: appleboy/ssh-action@master
+        with:
+          timeout: 200m
+          command_timeout: 200m
+          host: ${{ secrets.HOST }}
+          username: ubuntu
+          key: ${{ secrets.PRIVATE_KEY }}
+          script: cd /home/ubuntu/back && sudo docker compose build
+      - name: restart service
+        uses: appleboy/ssh-action@master
+        with:
+          host: kanban-pumpkin.ru
+          username: ubuntu
+          key: ${{ secrets.PRIVATE_KEY }}
+          script: cd /home/ubuntu/back && make build_all -j && docker compose up --build
