--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
         with:
           timeout: 200m
           command_timeout: 200m
-          host: ${{ secrets.HOST }}
+          host: kanban-pumpkin.ru
           username: ubuntu
           key: ${{ secrets.PRIVATE_KEY }}
           script: cd /home/ubuntu/back && sudo docker compose build
