--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,23 +7,23 @@ on:
     branches:
         - staging
 jobs:
-  # linter:
-  #   name: linters
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     -
-  #       name: checkout staging
-  #       uses: actions/checkout@v4
-  #     -
-  #       name: install Go
-  #       uses: actions/setup-go@v5
-  #       with:
-  #           go-version: '1.23'
-  #     - 
-  #       name: golangci-lint
-  #       uses: golangci/golangci-lint-action@v4
-  #       with:
-  #           version: v1.62.2
+  linter:
+    name: linters
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: checkout staging
+        uses: actions/checkout@v4
+      -
+        name: install Go
+        uses: actions/setup-go@v5
+        with:
+            go-version: '1.23'
+      - 
+        name: golangci-lint
+        uses: golangci/golangci-lint-action@v4
+        with:
+            version: v1.62.2
 
   tests:
     runs-on: ubuntu-latest
@@ -49,7 +49,6 @@ jobs:
 
   deploy:
     name: deploy 
-    needs: tests
     runs-on: ubuntu-latest
     steps:
       - 
