Закомментил migrator в dockerfile

--- a/cmd/auth/Dockerfile
+++ b/cmd/auth/Dockerfile
@@ -12,8 +12,8 @@ WORKDIR /app
 COPY ./Makefile .
 COPY ./database/migrations/ ./migrations/
 COPY ./build/auth_app .
-COPY ./build/migrator .
+# COPY ./build/migrator .
 RUN chmod +x ./auth_app
-RUN chmod +x /usr/bin/migrate
+# RUN chmod +x /usr/bin/migrate
 
 ENTRYPOINT /app/auth_app
