--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,8 +44,7 @@ http {
         # Перенаправление запросов с префиксами /static, /inviteBoard, /card
         # а также запросов к /runtime.js, /main.js, /main.css на фронт
         location / {
-            set $target http://main_front:8880;
-            proxy_pass $target;
+            proxy_pass http://main_front:8880;
         }
 
         client_max_body_size 100M;
