--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,40 +11,32 @@ jobs:
     name: linters
     runs-on: ubuntu-latest
     steps:
-      -
-        name: checkout staging
+      - name: checkout staging
         uses: actions/checkout@v4
-      -
-        name: install Go
+
+      - name: install Go
         uses: actions/setup-go@v5
         with:
             go-version: '1.23'
-      -
-        name: golangci-lint
+
+      - name: golangci-lint
         uses: golangci/golangci-lint-action@v4
         with:
             version: v1.62.2
 
   tests:
     runs-on: ubuntu-latest
+    needs: linter
     steps:
-      -
-        name: checkout staging
+      - name: checkout staging
         uses: actions/checkout@v4
-      -
-        name: install Go
+
+      - name: install Go
         uses: actions/setup-go@v5
         with:
           go-version: '1.23'
-      -
-        run: |
-          sudo apt-get -y update
-          sudo apt-get install -y libwebp-dev wkhtmltopdf
-      -
-        name: build
-        run: go build -v ./...
-      -
-        name: Test
+
+      - name: Test
         run: go test -v ./...
 
   deploy:
