Добавлен utils - бинарь для того, чтобы делать наполнение БД и обновление индексов elastic

--- a/cmd/board/Dockerfile
+++ b/cmd/board/Dockerfile
@@ -1,7 +1,6 @@
-FROM ubuntu
+FROM scratch
 
 WORKDIR /app
 COPY ./build/board_app .
-RUN chmod +x ./board_app
 
-ENTRYPOINT /app/board_app
+CMD ["/app/board_app"]
