изменен dockerfile для auth

--- a/cmd/auth/Dockerfile
+++ b/cmd/auth/Dockerfile
@@ -6,14 +6,15 @@ WORKDIR /tmp
 RUN wget https://github.com/golang-migrate/migrate/releases/download/v4.18.1/migrate.linux-amd64.tar.gz -O migrate.tar.gz
 RUN tar -xzf migrate.tar.gz
 RUN cp ./migrate /usr/bin/migrate
+RUN chmod +x /usr/bin/migrate
 RUN rm -rf migrate migrate.tar.gz
 
 WORKDIR /app
 COPY ./Makefile .
 COPY ./database/migrations/ ./migrations/
 COPY ./build/auth_app .
-# COPY ./build/migrator .
+COPY ./build/utils .
 RUN chmod +x ./auth_app
-# RUN chmod +x /usr/bin/migrate
+RUN chmod +x utils
 
 ENTRYPOINT /app/auth_app
