--- a/database/postgres/postgresql.conf
+++ b/database/postgres/postgresql.conf
@@ -1,6 +1,8 @@
 max_connections = 33
 superuser_reserved_connections = 3
 
+listen_addresses = '*'
+
 ssl = on
 ssl_cert_file = '/pg_setup/server.crt'
 ssl_key_file = '/pg_setup/server.key'
